--- a/Games/SequenceDice/Blazor/Views/SequenceDiceMainView.razor
+++ b/Games/SequenceDice/Blazor/Views/SequenceDiceMainView.razor
@@ -18,7 +18,7 @@
         </GridGameBoard>
     </GridItem>
     <GridItem Column="2">
-        <div style="height: 22vh">
+        <div class="@css1.CenteredFlex" style="height: 22vh">
             <GameButtonComponent CommandObject="RollCommand" Display="Roll Dice" />
             <DiceListConrolBlazor D="SimpleDice" Cup="@DataContext!.GetCup" TargetHeight="20vh" />
         </div>
