--- a/Games/SequenceDice/_Imports.razor
+++ b/Games/SequenceDice/_Imports.razor
@@ -23,3 +23,4 @@
 @using BasicBlazorLibrary.Components.CssGrids;
 @using BasicGameFrameworkLibrary.Core.Dice
 @using BasicGameFrameworkLibrary.Blazor.GameGraphics.Dice
+@using css1 = BasicGameFrameworkLibrary.Blazor.Helpers.CssHelpers
